# fs-sentinel

./: CHANGELOG.md  Cargo.toml  INSTALL.org  LICENSE  Makefile  README.org
.github/workflows/: release.yml
src/: daemon.rs  lib.rs  linux.rs  platform.rs
zfs-linux/: fs-sentinel-daemon.service  fs-sentinel-sanoid-postsnapshot.sh  fs-sentinel-sanoid-presnapshot.sh  fs-sentinel-zfs-daemon.sh
