[package]
name = "fs-sentinel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["sync", "fs", "signal", "process", "macros", "rt-multi-thread", "net", "io-util"] }
tokio-stream = { version = "0.1", features = ["net"] }
async-trait = "0.1"
futures = "0.3"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"

[features]
default = ["linux"]
linux = []
